[package]
name = "coders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
ndarray = "0.15.3"
image = "0.23.14"
constriction = "0.1.2"
probability = "0.17.0"
ml = { path = "../ml" }
