[package]
name = "ml"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
serde_json = "1.0"
thiserror = "1.0.25"
ndarray-npy = "0.8.0"
convolutions-rs = "0.2.2"
log = "0.4.14"
constriction = { path = "../library-reimplementations/constriction" }


[dev-dependencies]
# For testing the weight loader
tempfile = "3.0.4"
num = "0.4.0"
