[package]
name = "wasm"
version = "0.1.0"
authors = ["Conzel <38732545+Conzel@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.35"
image = "0.23.14"
coders = { path = "../coders" }
# subdependency of mathru, we need to enable the js feature to compile
getrandom = { version = "0.2.3", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[dependencies.web-sys]
version = "0.3.35"
features = ["console"]
