[package]
name = "zipnet"
version = "0.1.0"
edition = "2018"
description = "Command-line interface to ZipNet."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.2"
image = "0.23.14"
nshare = { version = "0.7.0", features = ["ndarray", "image"] }
ndarray = "0.15.3"
ndarray-npy = "0.8.0"
coders = { path = "../coders" }
bincode = "1.2.1"
